--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@
     margin: 10px;
     margin-left: auto;
     margin-right: auto;
-    display: block;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
