--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ color: white;
 
 .box {
   text-align: center;
-  background-color: rgb(48, 47, 47);
+  background-color: #b601ce;
   color: #cccc22;
   padding: 20px;
 }
