--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ color: white;
 .box {
   text-align: center;
   background-color: #b601ce;
-  color: #cccc22;
+  color: #ff8000;
   padding: 20px;
 }
 
