--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ font-size: 17px;
 
 /* hovering within navbar */
 .topnav a:hover {
-background-color: #000000;
+background-color: black;
 color: black;
 }
 
