--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: black;
+  background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
 }
 
 
@@ -43,7 +43,7 @@ color: white;
 
 .box {
   text-align: center;
-  background-color: #000000;
+  background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
   color: #ff8000;
   padding: 20px;
 }
@@ -52,4 +52,8 @@ color: white;
   background-color: rgb(48, 47, 47);
   color :#ff8000;
   padding: 20px;
+}
+
+.body {
+  background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
 }
