--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
+  background: navy;
 }
 
 
@@ -32,7 +32,7 @@ font-size: 17px;
 /* hovering within navbar */
 .topnav a:hover {
 background-color: black;
-color: black;
+color: rgb(5, 61, 175);
 }
 
 /* discrepancy on current link */
@@ -43,8 +43,8 @@ color: white;
 
 .box {
   text-align: center;
-  background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
-  color: #ff8000;
+  background: navy;
+  color: navy;
   padding: 20px;
 }
 
@@ -54,6 +54,3 @@ color: white;
   padding: 20px;
 }
 
-.body {
-  background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
-}
