more color changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ overflow: hidden;
 /* links within navbar */
 .topnav a {
 float: left;
-color: #ff8000;
+color: #64b7f7;
 text-align: center;
 padding: 14px 16px;
 text-decoration: none;
