--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ font-size: 17px;
 
 /* hovering within navbar */
 .topnav a:hover {
-background-color: black;
+background-color: rgb(114, 187, 239);
 color: rgb(120, 164, 250);
 }
 
